--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>welcome to web page</h1>
+    <p>Hi how r u</p>
+    <p>Hi how r u</p>
+    <p>Hi how r u</p>
 </body>
 </html>
