--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hi</h1>
+   <h1>welcome</h1>
+   <table>
+    <th> <tr>Id</tr> </th>
+       
+   
+   
+    <td>1</td>
+    <td>2</td>
+    <td>3</td>
+<tr>Name</tr></th>
+<td>Aravind</td>
+<td>Babu</td>
+<td>David</td>
+</table>
 </body>
 </html>
